--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,7 +8,7 @@
   --bolder-font: 900;
   --bg-color: #fcfcfc;
   --primary-color: #4756df;
-  --secondary-color: #ff7235;
+  --secondary-color: #bd4343;
   --primary-shadow: #8b8eaf;
   --secondary-shadow: #a17a69;
   --bottom-margin: 0.5rem;
@@ -46,11 +46,6 @@ a:hover {
 
 body {
   font-family: var(--font-family);
-}
-
-section {
-  /* max-width: 1100px;
-  margin: auto; */
 }
 
 /* CSS Resets end */
@@ -113,8 +108,8 @@ nav ul li {
 }
 
 .hero img {
-  height: 30.5rem;
-  width: 37.5rem;
+  height: 20rem;
+  width: 27rem;
 }
 
 .bio {
@@ -126,6 +121,10 @@ nav ul li {
 
 .bio h1 {
   margin-bottom: var(--bottom-margin);
+}
+
+.bio h2 {
+  color: #4a6741;
 }
 
 .bio p {
@@ -144,6 +143,7 @@ nav ul li {
 .more-about h2 {
   margin-bottom: var(--bottom-margin);
   text-align: center;
+  color: #4a6741;
 }
 
 .more-about p {
@@ -175,6 +175,7 @@ nav ul li {
 .projects-title {
   text-align: center;
   margin-bottom: 1rem;
+  color: #4a6741;
 }
 
 .project-container {
@@ -193,6 +194,10 @@ nav ul li {
 
 .project-details {
   margin-bottom: var(--bottom-margin);
+}
+
+.project-link {
+  color: #4a6741;
 }
 
 /* Projects section ends */
